--- a/Javascript/main.html
+++ b/Javascript/main.html
@@ -7,7 +7,8 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-    <script>  
+    <script> 
+    var m=1; 
     var a=10;// variable is declared and initilized,you can declare var multiple time and can overwrite
     let b=5;//you can assign value in this case but can't declare the same variable 2nd time
     const c=a+b; //you can't assign and overwrite by using this constant
